<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">myKubota</string>
    <string name="title_equipment">Equipment</string>
    <string name="title_resources">Resources</string>
    <string name="title_kubota_now">Kubota<i>NOW</i></string>
    <string name="title_dealers">Dealers</string>
    <string name="title_profile">Profile</string>
    <string name="locator_tab">Locations</string>
    <string name="my_dealers_tab">Favorites</string>
    <string name="welcome_message">Welcome to myKubota</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="skip">Skip</string>
    <string name="equipment_tab">Equipment</string>
    <string name="geofence_tab">Geofences</string>
    <string name="profile_title">Profile</string>
    <string name="sign_in_menu_title">@string/sign_in</string>
    <string name="sign_in_header">Please Sign In or Create a myKubota Account</string>
    <string name="change_password_preference_title">Change Password</string>
    <string name="send_verification_email">Send Verification Email</string>
    <string name="verification_email_sent">Verification Email Sent</string>
    <string name="change_password_success">Your password was changed successfully</string>
    <string name="profile_settings">Settings</string>
    <string name="us">US</string>
    <string name="metric">Metric</string>
    <string name="promotionsAndAnnouncements">Promotions and announcements</string>
    <string name="informationAboutEquipment">Information about equipment</string>
    <string name="profile_turn_on_mfa">Turn on Multi-factor Authentication</string>
    <string name="about_preference_title">About</string>
    <string name="legal_terms_preference_title">Legal Terms</string>
    <string name="kubota_website_preference_title">Kubota Website</string>
    <string name="kubota_report_problem">Report a Problem</string>
    <string name="sign_out_dialog_title">Sign Out?</string>
    <string name="sign_out_dialog_message">You are now signing out of the app.</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="about_fragment_title">About</string>
    <string name="app_name_and_version"><xliff:g id="app_name">%1$s</xliff:g>\u0020<xliff:g id="app_version">%2$s</xliff:g>_<xliff:g id="app_build">%3$d</xliff:g></string>
    <string name="about_app">Kubota is always looking for ways to support and empower Kubota owners. The myKubota app is
        a companion for Kubota equipment owners that gives them the ability to proactively maintain and care for their equipment.
        \n\nThe myKubota app easily allows the user to:\n\n- Keep track of their Kubota equipment, including the ability
        to add serial numbers for quick reference.\n\n- Access and browse Kubota equipment user manuals.\n\n- Conduct general
        upkeep of equipment by following along with the self-guided maintenance guides.\n\n- Find, locate, and save nearby
        dealers for easy reference and contact.
    </string>
    <string name="legal_terms_fragment_title">Legal Terms</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="california_policy">CCPA (California Residents)</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="no_machine_title">No Machines Yet</string>
    <string name="no_machine_message">Add your machine to access Manuals, Maintenance Guides, and Schedules.</string>
    <string name="no_attachment_title">No Attachments Yet</string>
    <string name="no_attachment_message">Add your attachments to access Manuals, Maintenance Guides, and Schedules</string>
    <string name="equipment_construction_category">Construction</string>
    <string name="equipment_mowers_category">Mowers</string>
    <string name="equipment_tractors_category">Tractors</string>
    <string name="equipment_utv_category">Utility Vehicles</string>
    <string name="equipment_model_fmt">Model: <xliff:g id="model_name">%1$s</xliff:g></string>
    <string name="equipment_pin_fmt">PIN: <xliff:g id="pin">%1$s</xliff:g></string>
    <string name="equipment_serial_fmt">Serial: <xliff:g id="pin">%1$s</xliff:g></string>
    <string name="equipment_hours">Hours: </string>
    <string name="equipment_removed_action">Equipment Removed</string>
    <string name="undo_action">UNDO</string>
    <string name="equipment_serial_number">Serial#</string>
    <string name="equipment_serial_number_fmt">Serial# <xliff:g id="serial_number">%1$s</xliff:g></string>
    <string name="engine_hours">Engine Hours</string>
    <string name="usage_hours">Usage Hours</string>
    <string name="kubota_now_telematics">Telematics</string>
    <string name="kubota_now_inhibit_restart">Inhibit Restart</string>
    <string name="kubota_now_geofence">Geofence</string>
    <string name="geofence">Geofence</string>
    <string name="geofence_n">Geofence <xliff:g id="number">%1$d</xliff:g></string>
    <string name="geofences">Geofences</string>
    <string name="create_geofences">Create Geofence</string>
    <string name="name_geofence">Name Geofence</string>
    <string name="geofence_1">Geofence 1</string>
    <string name="save">Save</string>
    <string name="fault_code_lookup">Fault Code Lookup</string>
    <string name="fault_code_description_single_line_fmt"><xliff:g id="code">%1$d</xliff:g> <xliff:g id="desc">%2$s</xliff:g></string>
    <string name="active">ACTIVE:</string>
    <string name="lookup">Lookup</string>
    <string name="look_up">LOOK UP</string>
    <string name="manuals">Manuals</string>
    <string name="maintenance_guides">Maintenance Guides</string>
    <string name="warranty_info">Warranty Information</string>
    <string name="compatible_attachments">Compatible Attachments</string>
    <string name="videos">Videos</string>
    <string name="faq_parts">Frequently Used Parts</string>
    <string name="maintenance_schedules">Maintenance Schedule</string>
    <string name="compatible_machines">Compatible Machines</string>
    <string name="edit_equipment_serial_number">Edit Serial Number</string>
    <string name="edit">Edit</string>
    <string name="nickname">Nickname</string>
    <string name="add_equipment_confirm">Please confirm your machine model:</string>
    <string name="manual_list_title"><xliff:g id="equipment">%1$s</xliff:g> Manuals</string>
    <string name="manual_title"><xliff:g id="equipment">%1$s</xliff:g> Manual</string>
    <string name="instructional_videos_title">Video Resources</string>
    <string name="videos_for_model"><xliff:g id="equipment">%1$s</xliff:g> Video Resources</string>
    <string name="guides_list_title"><xliff:g id="equipment">%1$s</xliff:g> Guides</string>
    <string name="no_dealers_title">No Favorited Dealers</string>
    <string name="no_dealers_message">You haven’t added any dealers to your My Dealers list.</string>
    <string name="dealer_removed_action">Dealer Removed</string>
    <string name="no_dealers_found_msg">Sorry, no dealers near this location</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_accept_button_text">Accept</string>
    <string name="disclaimer_wording">The information contained in this application is for general information purposes only.\n\n
        The information is provided by Kubota Tractor Corporation (\“Kubota\” or \“we\”). WHILE WE ENDEAVOR TO KEEP THE
        INFORMATION UP-TO-DATE AND CORRECT, WE MAKE NO REPRESENTATIONS OR WARRANTIES OF ANY KIND, EXPRESS OR IMPLIED,
        ABOUT THE COMPLETENESS, ACCURACY, RELIABILITY, SUITABILITY OR AVAILABILITY WITH RESPECT TO THE MOBILE APPLICATION
        OR THE INFORMATION, PRODUCTS, SERVICES, OR RELATED GRAPHICS CONTAINED ON THE MOBILE APPLICATION FOR ANY PURPOSE.
        THE INFORMATION CONTAINED IN THIS APPLICATION MAY BE OUT-OF-DATE OR CONTAIN ERRORS OR INACCURACIES. KUBOTA HAS
        NO OBLIGATION TO CORRECT ANY BUGS, DEFECTS OR ERRORS IN THE INFORMATION, OR TO OTHERWISE SUPPORT, MAINTAIN, IMPROVE,
        MODIFY, UPGRADE, UPDATE OR ENHANCE THE APPLICATION. ANY RELIANCE YOU PLACE ON SUCH INFORMATION IS THEREFORE
        STRICTLY AT YOUR OWN RISK.  WE DO, HOWEVER, ENCOURAGE YOU TO SEEK HARD COPIES OF SUCH INFORMATION FROM YOUR DEALER.\n\n
        IN NO EVENT WILL KUBOTA BE LIABLE FOR ANY LOSS OR DAMAGE INCLUDING WITHOUT LIMITATION, INDIRECT OR CONSEQUENTIAL
        LOSS OR DAMAGE, OR ANY LOSS OR DAMAGE WHATSOEVER ARISING FROM LOSS OF DATA OR PROFITS ARISING OUT OF, OR IN CONNECTION
        WITH, THE USE OF THIS MOBILE APPLICATION.\n\n
        Through this application you may be able to link to other applications or websites which are not under the control
        of Kubota. We have no control over the nature, content and availability of those applications or sites. The inclusion
        of any links does not necessarily imply a recommendation or endorsement of the views expressed within them.\n\n
        Every effort is made to keep the mobile application up and running. However, Kubota takes no responsibility for,
        and will not be liable for, the mobile application being temporarily unavailable due to technical issues.</string>
    <string name="address_two_line_fmt"><xliff:g id="street number">%1$s</xliff:g> <xliff:g id="street">%2$s</xliff:g>\n<xliff:g id="city">%3$s</xliff:g>, <xliff:g id="state or province">%4$s</xliff:g> <xliff:g id="postal code">%5$s</xliff:g></string>
    <string name="city_state_postal_code_fmt"><xliff:g id="city">%1$s</xliff:g>, <xliff:g id="state or province">%2$s</xliff:g> <xliff:g id="postal code">%3$s</xliff:g></string>
    <string name="outgoing_call_title">Outgoing Call</string>
    <string name="leave_app_dialog_title">Leave the app?</string>
    <string name="outgoing_call_msg">Do you want to call: <xliff:g example="(555) 555-1212" id="phone number">%1$s</xliff:g>?</string>
    <string name="leave_app_dealer_website_msg">You are now leaving the myKubota app to visit the Kubota dealer website.</string>
    <string name="leave_app_dealer_directions_msg">You are now leaving the myKubota app to navigate to a Kubota dealership.</string>
    <string name="leave_app_kubota_usa_website_msg">You are now leaving the myKubota app to visit the Kubota website.</string>
    <string name="leave_app_generic_msg">Are you sure you want to leave the myKubota app?</string>
    <string name="guides_step_fmt">Step <xliff:g id="current step">%1$d</xliff:g> of <xliff:g id="total number of steps">%2$d</xliff:g></string>
    <string name="back">Back</string>
    <string name="play_audio">Play Audio</string>
    <string name="guides_audio_track_fmt">Step <xliff:g id="current step">%1$d</xliff:g>: <xliff:g id="step tittle">%2$s</xliff:g></string>
    <string name="guides_page_step_fmt">Step <xliff:g id="current step">%1$d</xliff:g></string>
    <string name="next">NEXT</string>
    <string name="server_error_message">Something went wrong. Please try again.</string>
    <string name="web_page_error_message">Webpage not available, please check your internet connection.</string>
    <string name="server_maintenance">The server is down for maintenance, please try again later.</string>
    <string name="send_new_code">Send new code</string>
    <string name="forgot_password_header">Please provide the following details.</string>
    <string name="forgot_password_subheader">Verification code has been sent to your inbox.\nPlease copy it to the input box below.</string>
    <string name="verification">Verification</string>
    <string name="verify_code">Verify code</string>
    <string name="dismiss_this_dialog">Dismiss this dialog</string>
    <string name="label_name">Name</string>
    <string name="track_engine_hours_notice">Engine hours are critical for tracking maintenance.</string>
    <string name="track_engine_hours_hint">What is your hour reading?</string>
</resources>