<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/close"
                android:layout_width="42dp"
                android:layout_height="35dp"
                android:contentDescription="@string/dismiss_this_dialog"
                app:srcCompat="@drawable/ic_close" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:layout_marginLeft="16dp"
                android:textSize="18sp"
                android:text="@string/name_geofence"
                android:textColor="@android:color/white"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <ProgressBar style="@style/ActionBarProgressBar" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorPrimary"
        android:text="@string/label_name"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/geofenceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:maxLines="1"
        android:maxLength="@integer/geofence_name_max_length"
        android:inputType="textNoSuggestions"
        android:text="@string/geofence_1"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel"
        />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ActionButtonStyle"
        android:text="@string/save"
        android:textAllCaps="true" />

</androidx.constraintlayout.widget.ConstraintLayout>