<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:background="@drawable/sign_in_activity_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="@dimen/welcome_text_size"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/welcome_text_bottom_margin"/>

    <Button
        android:id="@+id/signInButton"
        android:text="@string/sign_in"
        style="@style/SignUpButtonStyle"
        android:background="@drawable/action_button_background"/>

    <Button
        android:id="@+id/createAccountButton"
        android:text="@string/create_account"
        style="@style/SignUpButtonStyle"
        android:background="@drawable/create_account_button_background"/>

    <TextView
        android:id="@+id/continueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorLink"
        android:background="?attr/selectableItemBackground"
        android:text="@string/guest_continue"
        android:textSize="@dimen/guest_continue_text_size"
        android:padding="@dimen/guest_continue_padding"/>

</LinearLayout>