<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/termsOfUseListItem"
            android:orientation="vertical"
            style="@style/ListItemStyle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/terms_of_use"
                style="@style/ItemTextViewStyle"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/divider_color"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/privacyPolicyListItem"
            android:orientation="vertical"
            style="@style/ListItemStyle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/privacy_policy"
                style="@style/ItemTextViewStyle"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/divider_color"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/disclaimerListItem"
            android:orientation="vertical"
            style="@style/ListItemStyle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/disclaimer"
                style="@style/ItemTextViewStyle"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/divider_color"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>