<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/nextButton"
            style="@style/ActionButtonStyle"
            android:textAllCaps="true"
            android:enabled="false"
            android:text="@string/verify_code"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/sign_in_button_top_margin" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_header"
                android:textSize="@dimen/account_setup_header_text_size"
                android:textColor="?android:textColorPrimary"
                android:layout_marginTop="@dimen/account_setup_header_top_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_subheader"
                android:textSize="@dimen/account_setup_header_text_size"
                android:textColor="?android:textColorPrimary"
                android:layout_marginTop="@dimen/account_setup_subheader_top_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/verify_code_top_margin"
                app:hintTextAppearance="@style/AccountSetUpTheme.HintTextAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/verificationCodeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/verification"
                    android:imeOptions="actionDone"
                    android:inputType="textNoSuggestions"
                    android:textAppearance="@style/AccountSetUpTheme.AccountSetUpTextAppearance"
                    android:textColor="?android:textColorSecondary" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/sendNewCodeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_new_code"
                android:layout_marginTop="@dimen/send_new_code_link_top_margin"
                android:textColor="?android:textColorLink"
                android:textSize="@dimen/account_setup_link_text_size"
                android:background="?attr/selectableItemBackground"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>