<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="26dp"
            android:src="@drawable/ic_error_warning_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="30dp"
            android:text="@string/track_engine_hours_notice"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hoursLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/track_engine_hours_hint"
        app:hintEnabled="true"
        app:hintTextColor="#6e6e6e">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="numberDecimal"
            android:maxLength="@integer/engine_hours_max_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/nextButton"
        style="@style/ActionButtonStyle"
        android:background="@color/action_button_color"
        android:enabled="false"
        android:text="@string/next" />

</LinearLayout>